sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: Boolean.type does not take parameters
	def tri()=(Boolean) {
                            ^